config-root/namespaces/jx-production/golab/golab-golab-deploy.yaml
# Source: golab/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golab-golab
  labels:
    draft: draft-app
    chart: "golab-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'golab'
    meta.helm.sh/release-namespace: 'jx-production'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: golab-golab
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: golab-golab
    spec:
      serviceAccountName: golab-golab
      containers:
      - name: golab
        image: "us-central1-docker.pkg.dev/ci-cd-349400/oci/golab:0.0.1"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
