config-root/namespaces/jx-production/golab/golab-svc.yaml
# Source: golab/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golab
  labels:
    chart: "golab-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'golab'
    meta.helm.sh/release-namespace: 'jx-production'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: golab-golab
