config-root/namespaces/jx-production/golab/golab-ingress.yaml
# Source: golab/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: 'golab'
    meta.helm.sh/release-namespace: 'jx-production'
  name: golab
  namespace: jx-production
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: golab
            port:
              number: 80
    host: "golab-jx-production.136.114.174.212.nip.io"
